@@ -85,15 +85,15 @@ class Test(gammalib.GPythonTestSuite):
 
         # Append tests
         self.append(self.test_log, 'Test GLog')
+        self.append(self.test_app, 'Test GApplication')
         self.append(self.test_pars, 'Test GApplicationPars')
-        self.append(self.test_par_iteration, 'Test GApplication parameter iteration')
 
         # Return
         return
 
     def test_log(self):
         """
-        Test GLog
+        Test GLog class
         """
         # Allocate logger
         log = gammalib.GLog(self._logfile, True)
@@ -192,11 +192,43 @@ class Test(gammalib.GPythonTestSuite):
         # Return
         return
 
+    def test_app(self):
+        """
+        Test GApplication class
+        """
+        # Set PFILES environment variable
+        os.environ['PFILES'] = os.environ['PWD']+'/data'
+        
+        # Allocate test application
+        app = gammalib.GApplication('test_GApplication', '1.1.0')
+        
+        # Check proper allocation of test application
+        self.test_value(app._name(), 'test_GApplication', 'Check application name')
+        self.test_value(app._version(), '1.1.0', 'Check application version')
+        self.test_value(app.pars().size(), 5, 'Check number of parameters')
+        
+        # Check that we properly can loop over all parameters. The npars
+        # variable counts the number of iterations. If the parameter "chatter"
+        # is encounter then set the chattiness to 4
+        npars = 0
+        for par in app:
+            npars += 1
+            if par.name() == 'chatter':
+                par.integer(4)
+        
+        # Check outcome of loop
+        self.test_value(npars, 5, 'Check number of parameters in loop')
+        self.test_value(app['chatter'].integer(), 4, 'Check that "chatter" '
+                        'parameter could be stored correctly')
+
+        # Return
+        return
+
     def test_pars(self):
         """
-        Test GApplicationPars
+        Test GApplicationPars class
         """
-        # Test GApplicationPars constructor with bad filename.
+        # Test GApplicationPars constructor with bad filename
         self.test_try('Test GApplicationPars constructor with bad filename')
         try:
             pars = gammalib.GApplicationPars('testme.par')
@@ -206,33 +238,5 @@ class Test(gammalib.GPythonTestSuite):
         else:
             self.test_try_failure('This should never happen')
 
-    def test_par_iteration(self):
-        
-        
-        # Set PFILES environment temporary
-        os.environ['PFILES'] = os.environ['PWD']+'/data'
-        
-        # Test GApplicationPars from par file
-        app =  gammalib.GApplication('test_GApplication','1.1.0')
-        
-        # Test for proper reading of par file
-        self.test_assert(app._version() == '1.1.0', 'Test for proper application version')
-        self.test_assert(app.pars().size() == 5, 'Test number of parameters')
-        
-        # Loop over parameters
-        npars = 0
-        for par in app:
-            
-            # Increment counter
-            npars += 1
-            
-            # Set chatter parameter to test persistence
-            if par.name() == 'chatter':
-                par.integer(4)
-        
-        # Test outcome of iteration
-        self.test_assert(npars == 5, 'Test number of parameters in iterative loop')
-        self.test_assert(app['chatter'].integer() == 4, 'Test if parameter could be stored correctly')
-                    
         # Return
         return
